[package]
name = "rust_utils"
version = "0.1.0"
edition = "2024"

[dependencies]
ractor = { version = "0.14.5", optional = true }
libm = "0.2.11"
chrono = { version = "0.4.39" }
sea-orm = { version = "1.1.4", optional = true }
serde = { version = "1.0.217", features = ["default", "derive"], optional = true }
serde_json = { version = "1.0.138", optional = true }
rand = { version = "0.9.0", optional = true }
md5 = { version = "0.7.0", optional = true }
scru128 = { version = "3.1.0", optional = true }
jsonwebtoken = { version = "9.3.0", optional = true }
tokio = { version = "^1.43.0", features = ["full"], optional = true }
http = { version = "1.2.0", optional = true }
axum-core = { version = "0.5.0", optional = true }
axum-extra = { version = "0.10.0", optional = true, features = ["default", "typed-header"] }

[features]
full = ["database_expand", "http_utils", "http_types", "http_serde_camel_case", "encrypt", "jwt", "jwt_bear", "ractor"]
# 一些数据库类型的扩展支持
database_expand = ["sea-orm", "serde", "serde_json"]
# 提供一些用于http的公共类型
http_types = ["serde"]
# http的数据传输序列化时使用camle_case
http_serde_camel_case = []
encrypt = ["rand", "md5"]
http_utils = ["http", "axum-extra", "axum-core"]
jwt = ["serde", "scru128", "jsonwebtoken"]
# 为bear类型的授权提供支持
jwt_bear = ["jwt", "http_utils"]
jwt_test = ["jwt", "tokio/test-util"]
